--- a/The Witcher/CoreData/Configuration/Subtitles/Project_1.json
+++ b/The Witcher/CoreData/Configuration/Subtitles/Project_1.json
@@ -9,7 +9,7 @@
         {
             "s": 886,
             "e": 7400,
-            "t": "The ballad I, Jaskier, the most \neminent bard in the continent, \nam about to conceive,",
+            "t": "The ballad I, Jaskier, the most  eminent bard in the continent, am about to conceive,",
             "id": 3,
             "tB": "",
             "a": "",
@@ -33,7 +33,7 @@
         {
             "s": 10858,
             "e": 17300,
-            "t": "the mighty witcher \nGeralt of Rivia and\nthe venerable sorceress \nYennefer of Vengerberg,",
+            "t": "the mighty witcher Geralt of    Rivia and the venerable sorceress   Yennefer of Vengerberg,",
             "id": 5,
             "tB": "",
             "a": "",
@@ -45,7 +45,7 @@
         {
             "s": 17442,
             "e": 22726,
-            "t": "and thus I will endeavour to \nconvey itwithout any sight of \nembellishment",
+            "t": "and thus I will endeavour to     convey it without any sight of    embellishment",
             "id": 6,
             "tB": "",
             "a": "",
@@ -57,7 +57,7 @@
         {
             "s": 22766,
             "e": 27640,
-            "t": "Geralt and Yennefer had just\nfound their lovely puppy Cirilla",
+            "t": "Geralt and Yennefer had just     found their lovely puppy Cirilla",
             "id": 7,
             "tB": "",
             "a": "",
@@ -69,7 +69,7 @@
         {
             "s": 27680,
             "e": 31514,
-            "t": "they decided to train her \nin Kaer Morhen,\nwhile they left me,",
+            "t": "they decided to train her in Kaer Morhen, while they left me,",
             "id": 8,
             "tB": "",
             "a": "",
@@ -93,7 +93,7 @@
         {
             "s": 32582,
             "e": 34751,
-            "t": "the most eminent bard \nin the continent,",
+            "t": "the most eminent bard in the       continent,",
             "id": 10,
             "tB": "",
             "a": "",
@@ -105,7 +105,7 @@
         {
             "s": 34791,
             "e": 38361,
-            "t": "singing for coin in the muddy \nstreets of a filthy suburb…",
+            "t": "singing for coin in the muddy     streets of a filthy suburb…",
             "id": 11,
             "tB": "",
             "a": "",
@@ -117,7 +117,7 @@
         {
             "s": 38801,
             "e": 42617,
-            "t": "Though, anyways, Ciri’s magical power and training",
+            "t": "Though, anyways, Ciri´s magical power and training",
             "id": 12,
             "tB": "",
             "a": "",
@@ -129,7 +129,7 @@
         {
             "s": 42657,
             "e": 46423,
-            "t": "proceeded as prosperously as \nGeralt and Yennefer’s \nbonds with the child,",
+            "t": "proceeded as prosperously as     Geralt´s and Yennefer´s bonds with     the child,",
             "id": 13,
             "tB": "",
             "a": "",
@@ -141,7 +141,7 @@
         {
             "s": 46463,
             "e": 50832,
-            "t": "so the two of them decided to \nsend her in an equally prosperous \nadventure in the woods",
+            "t": "so the two of them decided to    send her in an equally prosperous    adventure into the woods",
             "id": 14,
             "tB": "",
             "a": "",
@@ -153,7 +153,7 @@
         {
             "s": 51228,
             "e": 52874,
-            "t": "where she would finish\nher tuition.",
+            "t": "where she would finish            her tuition.",
             "id": 15,
             "tB": "",
             "a": "",
@@ -177,7 +177,7 @@
         {
             "s": 54965,
             "e": 58578,
-            "t": "sending a pubescent girl into \ndangerous woods alone\nwhile she discovers",
+            "t": "sending a pubescent girl into     dangerous woods alone while         she discovers",
             "id": 17,
             "tB": "",
             "a": "",
@@ -189,7 +189,7 @@
         {
             "s": 58618,
             "e": 63624,
-            "t": "unprecedented magical potential was indeed \nnot the most brilliant idea.",
+            "t": "unprecedented magical potential was indeed not                     the most brilliant idea.",
             "id": 18,
             "tB": "",
             "a": "",
@@ -201,7 +201,7 @@
         {
             "s": 64341,
             "e": 68235,
-            "t": "The lovely child unleashed \nnot-so-lovely magic pulse\nin an horrific thunder",
+            "t": "The lovely child unleashed       not-so-lovely magic pulse in an                        horrific thunder",
             "id": 19,
             "tB": "",
             "a": "",
