--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -189,6 +189,7 @@
     <ClInclude Include="EffectsFunctions.h" />
     <ClInclude Include="EventManager.h" />
     <ClInclude Include="Floating.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="InGame_UI.h" />
     <ClInclude Include="MainMenu_Buttons.h" />
     <ClInclude Include="PauseMenu_Buttons.h" />
@@ -226,6 +227,7 @@
     <ClCompile Include="ExplodeChildren.cpp" />
     <ClCompile Include="Extra_Menus.cpp" />
     <ClCompile Include="Floating.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="InGame_UI.cpp" />
     <ClCompile Include="MainMenu_Buttons.cpp" />
     <ClCompile Include="PauseMenu_Buttons.cpp" />
