--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -22,7 +22,6 @@
     <ClCompile Include="DialogueTriggerSimple.cpp">
       <Filter>Scripts\Dialogues</Filter>
     </ClCompile>
-    <ClCompile Include="Subtitle.cpp" />
     <ClCompile Include="CameraEnterExit.cpp">
       <Filter>Scripts\Cameras</Filter>
     </ClCompile>
@@ -116,6 +115,12 @@
     <ClCompile Include="Trigger_Win.cpp">
       <Filter>Scripts\Triggers</Filter>
     </ClCompile>
+    <ClCompile Include="GameManager.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="Subtitle.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -139,7 +144,6 @@
     <ClInclude Include="DialogueTriggerSimple.h">
       <Filter>Scripts\Dialogues</Filter>
     </ClInclude>
-    <ClInclude Include="Subtitle.h" />
     <ClInclude Include="CameraEnterExit.h">
       <Filter>Scripts\Cameras</Filter>
     </ClInclude>
@@ -235,6 +239,12 @@
     </ClInclude>
     <ClInclude Include="Trigger_Win.h">
       <Filter>Scripts\Triggers</Filter>
+    </ClInclude>
+    <ClInclude Include="GameManager.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="Subtitle.h">
+      <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
