--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -177,6 +177,7 @@
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraLimits.h" />
     <ClInclude Include="CameraMovement.h" />
+    <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="Check_EndMenu.h" />
     <ClInclude Include="DebugManager.h" />
     <ClInclude Include="DialogueManager.h" />
@@ -219,6 +220,7 @@
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraLimits.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
+    <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="Check_EndMenu.cpp" />
     <ClCompile Include="DebugManager.cpp" />
     <ClCompile Include="DialogueManager.cpp" />
