Finished camera teleport

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -202,6 +202,7 @@
     <ClInclude Include="Macros\AlienScripts.h" />
     <ClInclude Include="Stat.h" />
     <ClInclude Include="Subtitle.h" />
+    <ClInclude Include="TeleportLevel.h" />
     <ClInclude Include="TriggerMusicInteractive.h" />
     <ClInclude Include="Trigger_Win.h" />
     <ClInclude Include="UI_Char_Frame.h" />
@@ -244,6 +245,7 @@
     <ClCompile Include="Macros\dllmain.cpp" />
     <ClCompile Include="Stat.cpp" />
     <ClCompile Include="Subtitle.cpp" />
+    <ClCompile Include="TeleportLevel.cpp" />
     <ClCompile Include="TriggerMusicInteractive.cpp" />
     <ClCompile Include="Trigger_Win.cpp" />
     <ClCompile Include="UI_Char_Frame.cpp" />
