Working on spawnRock

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -127,6 +127,9 @@
     <ClCompile Include="TeleportLevel.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="RockFall.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -256,6 +259,9 @@
       <Filter>Scripts\Player</Filter>
     </ClInclude>
     <ClInclude Include="TeleportLevel.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="RockFall.h">
       <Filter>Scripts</Filter>
     </ClInclude>
   </ItemGroup>
