--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -200,6 +200,7 @@
     <ClInclude Include="ReverbZone.h" />
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Macros\AlienScripts.h" />
+    <ClInclude Include="RockFall.h" />
     <ClInclude Include="Stat.h" />
     <ClInclude Include="Subtitle.h" />
     <ClInclude Include="TeleportLevel.h" />
@@ -243,6 +244,7 @@
     <ClCompile Include="ReverbZone.cpp" />
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Macros\dllmain.cpp" />
+    <ClCompile Include="RockFall.cpp" />
     <ClCompile Include="Stat.cpp" />
     <ClCompile Include="Subtitle.cpp" />
     <ClCompile Include="TeleportLevel.cpp" />
