Trigger a Relic triggers a notification
Queue System not implemented yet

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -130,6 +130,9 @@
     <ClCompile Include="RockFall.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="Relic_Notification.cpp">
+      <Filter>Scripts\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -263,6 +266,9 @@
     </ClInclude>
     <ClInclude Include="RockFall.h">
       <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="Relic_Notification.h">
+      <Filter>Scripts\UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
