--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -124,6 +124,9 @@
     <ClCompile Include="PlayerManager.cpp">
       <Filter>Scripts\Player</Filter>
     </ClCompile>
+    <ClCompile Include="RelicManager.cpp">
+      <Filter>Scripts\Stats and Effects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -251,6 +254,9 @@
     </ClInclude>
     <ClInclude Include="PlayerManager.h">
       <Filter>Scripts\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="RelicManager.h">
+      <Filter>Scripts\Stats and Effects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
