--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -287,7 +287,7 @@
     </ClInclude>
     <ClInclude Include="Ghoul.h">
       <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
+    </ClInclude>
     <ClInclude Include="Relic_Notification.h">
       <Filter>Scripts\UI</Filter>
     </ClInclude>
