--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -179,6 +179,8 @@
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraLimits.h" />
     <ClInclude Include="CameraMovement.h" />
+    <ClInclude Include="CheckPoint.h" />
+    <ClInclude Include="CheckPoints_Manager.h" />
     <ClInclude Include="Ghoul.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="Check_EndMenu.h" />
@@ -227,6 +229,8 @@
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraLimits.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
+    <ClCompile Include="CheckPoint.cpp" />
+    <ClCompile Include="CheckPoints_Manager.cpp" />
     <ClCompile Include="Ghoul.cpp" />
     <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="Check_EndMenu.cpp" />
