--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -100,15 +100,12 @@
     <ClCompile Include="Check_EndMenu.cpp">
       <Filter>Scripts\UI</Filter>
     </ClCompile>
-    <ClCompile Include="DebugManager.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
     <ClCompile Include="ExplodeChildren.cpp">
       <Filter>Scripts\Objects</Filter>
     </ClCompile>
     <ClCompile Include="Subtitle.cpp">
       <Filter>Scripts</Filter>
-      </ClCompile>
+    </ClCompile>
     <ClCompile Include="Audio_Button.cpp">
       <Filter>Scripts\UI</Filter>
     </ClCompile>
@@ -141,6 +138,15 @@
     </ClCompile>
     <ClCompile Include="RelicManager.cpp">
       <Filter>Scripts\Stats and Effects</Filter>
+    </ClCompile>
+    <ClCompile Include="DebugManager.cpp">
+      <Filter>Scripts\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="CheckPoints_Manager.cpp">
+      <Filter>Scripts\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="CheckPoint.cpp">
+      <Filter>Scripts\Debug</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -252,15 +258,12 @@
     <ClInclude Include="Check_EndMenu.h">
       <Filter>Scripts\UI</Filter>
     </ClInclude>
-    <ClInclude Include="DebugManager.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="ExplodeChildren.h">
       <Filter>Scripts\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Subtitle.h">
       <Filter>Scripts</Filter>
-       </ClInclude>
+    </ClInclude>
     <ClInclude Include="Audio_Button.h">
       <Filter>Scripts\UI</Filter>
     </ClInclude>
@@ -294,6 +297,15 @@
     <ClInclude Include="RelicManager.h">
       <Filter>Scripts\Stats and Effects</Filter>
     </ClInclude>
+    <ClInclude Include="DebugManager.h">
+      <Filter>Scripts\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="CheckPoints_Manager.h">
+      <Filter>Scripts\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="CheckPoint.h">
+      <Filter>Scripts\Debug</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Scripts">
@@ -322,6 +334,9 @@
     </Filter>
     <Filter Include="Scripts\Objects">
       <UniqueIdentifier>{c5fbad49-d2c4-4e75-89d0-8646dfde0057}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Debug">
+      <UniqueIdentifier>{2439b081-3d52-4572-8338-780c4f33dd4e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
