--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -148,6 +148,9 @@
     <ClCompile Include="CheckPoint.cpp">
       <Filter>Scripts\Debug</Filter>
     </ClCompile>
+    <ClCompile Include="Scale_Win.cpp">
+      <Filter>Scripts\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -305,6 +308,9 @@
     </ClInclude>
     <ClInclude Include="CheckPoint.h">
       <Filter>Scripts\Debug</Filter>
+    </ClInclude>
+    <ClInclude Include="Scale_Win.h">
+      <Filter>Scripts\UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
