--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -211,6 +211,7 @@
     <ClInclude Include="Macros\AlienScripts.h" />
     <ClInclude Include="RockFall.h" />
     <ClInclude Include="Scale_Win.h" />
+    <ClInclude Include="Spawner.h" />
     <ClInclude Include="Stat.h" />
     <ClInclude Include="Subtitle.h" />
     <ClInclude Include="TeleportLevel.h" />
@@ -261,6 +262,7 @@
     <ClCompile Include="Macros\dllmain.cpp" />
     <ClCompile Include="RockFall.cpp" />
     <ClCompile Include="Scale_Win.cpp" />
+    <ClCompile Include="Spawner.cpp" />
     <ClCompile Include="Stat.cpp" />
     <ClCompile Include="Subtitle.cpp" />
     <ClCompile Include="TeleportLevel.cpp" />
