--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -151,6 +151,9 @@
     <ClCompile Include="Scale_Win.cpp">
       <Filter>Scripts\UI</Filter>
     </ClCompile>
+    <ClCompile Include="Spawner.cpp">
+      <Filter>Scripts\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -310,6 +313,9 @@
       <Filter>Scripts\Debug</Filter>
     </ClInclude>
     <ClInclude Include="Scale_Win.h">
+      <Filter>Scripts\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="Spawner.h">
       <Filter>Scripts\UI</Filter>
     </ClInclude>
   </ItemGroup>
