--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -1,348 +1,106 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Macros\dllmain.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="EventManager.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="Floating.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="ReverbZone.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraLimits.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="DialogueManager.cpp">
-      <Filter>Scripts\Dialogues</Filter>
-    </ClCompile>
-    <ClCompile Include="DialogueTriggerSimple.cpp">
-      <Filter>Scripts\Dialogues</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraEnterExit.cpp">
-      <Filter>Scripts\Cameras</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraLimits.cpp">
-      <Filter>Scripts\Cameras</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraMovement.cpp">
-      <Filter>Scripts\Cameras</Filter>
-    </ClCompile>
-    <ClCompile Include="Effect.cpp">
-      <Filter>Scripts\Stats and Effects</Filter>
-    </ClCompile>
-    <ClCompile Include="Stat.cpp">
-      <Filter>Scripts\Stats and Effects</Filter>
-    </ClCompile>
-    <ClCompile Include="ArrowScript.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="Enemy.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="EnemyManager.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="NilfgaardSoldier.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="Extra_Menus.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="InGame_UI.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="MainMenu_Buttons.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="PauseMenu_Buttons.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="UI_Char_Frame.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="UI_EndMenu.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="UltiBar.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="Win_lose_menu.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerAttacks.cpp">
-      <Filter>Scripts\Player</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerController.cpp">
-      <Filter>Scripts\Player</Filter>
-    </ClCompile>
-    <ClCompile Include="RelicBehaviour.cpp">
-      <Filter>Scripts\Stats and Effects</Filter>
-    </ClCompile>
-    <ClCompile Include="TriggerAudioEvent.cpp">
-      <Filter>Scripts\Triggers</Filter>
-    </ClCompile>
-    <ClCompile Include="TriggerCamera.cpp">
-      <Filter>Scripts\Triggers</Filter>
-    </ClCompile>
-    <ClCompile Include="TriggerEnvironment.cpp">
-      <Filter>Scripts\Triggers</Filter>
-    </ClCompile>
-    <ClCompile Include="TriggerFootsteps.cpp">
-      <Filter>Scripts\Triggers</Filter>
-    </ClCompile>
-    <ClCompile Include="BreakableObject.cpp">
-      <Filter>Scripts\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Check_EndMenu.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="ExplodeChildren.cpp">
-      <Filter>Scripts\Objects</Filter>
-    </ClCompile>
-    <ClCompile Include="Subtitle.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="Audio_Button.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="TriggerMusicInteractive.cpp">
-      <Filter>Scripts\Triggers</Filter>
-    </ClCompile>
-    <ClCompile Include="Trigger_Win.cpp">
-      <Filter>Scripts\Triggers</Filter>
-    </ClCompile>
-    <ClCompile Include="GameManager.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="Subtitle.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerManager.cpp">
-      <Filter>Scripts\Player</Filter>
-    </ClCompile>
-    <ClCompile Include="Leshen.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="TeleportLevel.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="RockFall.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
-    <ClCompile Include="Ghoul.cpp">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClCompile Include="Relic_Notification.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="RelicManager.cpp">
-      <Filter>Scripts\Stats and Effects</Filter>
-    </ClCompile>
-    <ClCompile Include="DebugManager.cpp">
-      <Filter>Scripts\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="CheckPoints_Manager.cpp">
-      <Filter>Scripts\Debug</Filter>
-    </ClCompile>
-    <ClCompile Include="CheckPoint.cpp">
-      <Filter>Scripts\Debug</Filter>
-    </ClCompile>
+    <ClCompile Include="ArrowScript.cpp" />
+    <ClCompile Include="Audio_Button.cpp" />
+    <ClCompile Include="BreakableObject.cpp" />
+    <ClCompile Include="CameraEnterExit.cpp" />
+    <ClCompile Include="CameraLimits.cpp" />
+    <ClCompile Include="CameraMovement.cpp" />
+    <ClCompile Include="Leshen.cpp" />
+    <ClCompile Include="CheckPoint.cpp" />
+    <ClCompile Include="CheckPoints_Manager.cpp" />
+    <ClCompile Include="Ghoul.cpp" />
+    <ClCompile Include="PlayerManager.cpp" />
+    <ClCompile Include="Check_EndMenu.cpp" />
+    <ClCompile Include="DebugManager.cpp" />
+    <ClCompile Include="DialogueManager.cpp" />
+    <ClCompile Include="DialogueTriggerSimple.cpp" />
+    <ClCompile Include="Effect.cpp" />
+    <ClCompile Include="ExplodeChildren.cpp" />
+    <ClCompile Include="Extra_Menus.cpp" />
+    <ClCompile Include="Floating.cpp" />
+    <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="InGame_UI.cpp" />
+    <ClCompile Include="MainMenu_Buttons.cpp" />
+    <ClCompile Include="PauseMenu_Buttons.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="EnemyManager.cpp" />
+    <ClCompile Include="EventManager.cpp" />
+    <ClCompile Include="NilfgaardSoldier.cpp" />
+    <ClCompile Include="PlayerAttacks.cpp" />
+    <ClCompile Include="RelicBehaviour.cpp" />
+    <ClCompile Include="Relic_Notification.cpp" />
+    <ClCompile Include="RelicManager.cpp" />
+    <ClCompile Include="ReverbZone.cpp" />
+    <ClCompile Include="PlayerController.cpp" />
+    <ClCompile Include="Macros\dllmain.cpp" />
+    <ClCompile Include="RockFall.cpp" />
+    <ClCompile Include="Stat.cpp" />
+    <ClCompile Include="Subtitle.cpp" />
+    <ClCompile Include="TeleportLevel.cpp" />
+    <ClCompile Include="TriggerMusicInteractive.cpp" />
+    <ClCompile Include="Trigger_Win.cpp" />
+    <ClCompile Include="UI_Char_Frame.cpp" />
+    <ClCompile Include="UI_EndMenu.cpp" />
+    <ClCompile Include="UltiBar.cpp" />
+    <ClCompile Include="TriggerAudioEvent.cpp" />
+    <ClCompile Include="TriggerCamera.cpp" />
+    <ClCompile Include="TriggerEnvironment.cpp" />
+    <ClCompile Include="TriggerFootsteps.cpp" />
+    <ClCompile Include="Win_lose_menu.cpp" />
+    <ClCompile Include="RootLeshen.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Macros\AlienScripts.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="EventManager.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="Floating.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="ReverbZone.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraLimits.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="DialogueManager.h">
-      <Filter>Scripts\Dialogues</Filter>
-    </ClInclude>
-    <ClInclude Include="DialogueTriggerSimple.h">
-      <Filter>Scripts\Dialogues</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraEnterExit.h">
-      <Filter>Scripts\Cameras</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraLimits.h">
-      <Filter>Scripts\Cameras</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraMovement.h">
-      <Filter>Scripts\Cameras</Filter>
-    </ClInclude>
-    <ClInclude Include="Effect.h">
-      <Filter>Scripts\Stats and Effects</Filter>
-    </ClInclude>
-    <ClInclude Include="EffectsFunctions.h">
-      <Filter>Scripts\Stats and Effects</Filter>
-    </ClInclude>
-    <ClInclude Include="Stat.h">
-      <Filter>Scripts\Stats and Effects</Filter>
-    </ClInclude>
-    <ClInclude Include="ArrowScript.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
-    <ClInclude Include="Enemy.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
-    <ClInclude Include="EnemyManager.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
-    <ClInclude Include="NilfgaardSoldier.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
-    <ClInclude Include="Extra_Menus.h">
-      <Filter>Scripts\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="InGame_UI.h">
-      <Filter>Scripts\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="MainMenu_Buttons.h">
-      <Filter>Scripts\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="PauseMenu_Buttons.h">
-      <Filter>Scripts\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="UI_Char_Frame.h">
-      <Filter>Scripts\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="UI_EndMenu.h">
-      <Filter>Scripts\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="UltiBar.h">
-      <Filter>Scripts\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="Win_lose_menu.h">
-      <Filter>Scripts\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerAttacks.h">
-      <Filter>Scripts\Player</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerController.h">
-      <Filter>Scripts\Player</Filter>
-    </ClInclude>
-    <ClInclude Include="RelicBehaviour.h">
-      <Filter>Scripts\Stats and Effects</Filter>
-    </ClInclude>
-    <ClInclude Include="TriggerAudioEvent.h">
-      <Filter>Scripts\Triggers</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraLimits.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="DialogueManager.h">
-      <Filter>Scripts\Dialogues</Filter>
-    </ClInclude>
-    <ClInclude Include="TriggerCamera.h">
-      <Filter>Scripts\Triggers</Filter>
-    </ClInclude>
-    <ClInclude Include="TriggerEnvironment.h">
-      <Filter>Scripts\Triggers</Filter>
-    </ClInclude>
-    <ClInclude Include="TriggerFootsteps.h">
-      <Filter>Scripts\Triggers</Filter>
-    </ClInclude>
-    <ClInclude Include="BreakableObject.h">
-      <Filter>Scripts\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="Check_EndMenu.h">
-      <Filter>Scripts\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="ExplodeChildren.h">
-      <Filter>Scripts\Objects</Filter>
-    </ClInclude>
-    <ClInclude Include="Subtitle.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="Audio_Button.h">
-      <Filter>Scripts\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="TriggerMusicInteractive.h">
-      <Filter>Scripts\Triggers</Filter>
-    </ClInclude>
-    <ClInclude Include="Trigger_Win.h">
-      <Filter>Scripts\Triggers</Filter>
-    </ClInclude>
-    <ClInclude Include="GameManager.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="Subtitle.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="PlayerManager.h">
-      <Filter>Scripts\Player</Filter>
-    </ClInclude>
-    <ClInclude Include="Leshen.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClCompile>
-    <ClInclude Include="TeleportLevel.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="RockFall.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
-    <ClInclude Include="Ghoul.h">
-      <Filter>Scripts\Enemies</Filter>
-    </ClInclude>
-    <ClInclude Include="Relic_Notification.h">
-      <Filter>Scripts\UI</Filter>
-    </ClInclude>
-    <ClInclude Include="RelicManager.h">
-      <Filter>Scripts\Stats and Effects</Filter>
-    </ClInclude>
-    <ClInclude Include="DebugManager.h">
-      <Filter>Scripts\Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="CheckPoints_Manager.h">
-      <Filter>Scripts\Debug</Filter>
-    </ClInclude>
-    <ClInclude Include="CheckPoint.h">
-      <Filter>Scripts\Debug</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="Scripts">
-      <UniqueIdentifier>{b85ddb15-4ad1-44e6-a89d-9257b5cd2371}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scripts\Dialogues">
-      <UniqueIdentifier>{74d326e8-26bc-4d13-9400-d1b383afaaf2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scripts\Cameras">
-      <UniqueIdentifier>{99fee0af-27f7-46a6-a63a-ba9932e11fcd}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scripts\Stats and Effects">
-      <UniqueIdentifier>{d2d3ad90-944b-486e-bcab-0da00c662628}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scripts\Enemies">
-      <UniqueIdentifier>{1fd589ff-a8d4-412b-9a50-2a76f10596cb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scripts\UI">
-      <UniqueIdentifier>{4c9baa8d-c35b-4473-ada1-b4ab0ce4b9f2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scripts\Player">
-      <UniqueIdentifier>{e428a472-0bb0-4dce-980f-fa155964e50d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scripts\Triggers">
-      <UniqueIdentifier>{4b461c48-f228-448b-bd9b-d17cc95854aa}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scripts\Objects">
-      <UniqueIdentifier>{c5fbad49-d2c4-4e75-89d0-8646dfde0057}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Scripts\Debug">
-      <UniqueIdentifier>{2439b081-3d52-4572-8338-780c4f33dd4e}</UniqueIdentifier>
-    </Filter>
+    <ClInclude Include="ArrowScript.h" />
+    <ClInclude Include="Audio_Button.h" />
+    <ClInclude Include="BreakableObject.h" />
+    <ClInclude Include="CameraEnterExit.h" />
+    <ClInclude Include="CameraLimits.h" />
+    <ClInclude Include="CameraMovement.h" />
+    <ClInclude Include="Leshen.h" />
+    <ClInclude Include="CheckPoint.h" />
+    <ClInclude Include="CheckPoints_Manager.h" />
+    <ClInclude Include="Ghoul.h" />
+    <ClInclude Include="PlayerManager.h" />
+    <ClInclude Include="Check_EndMenu.h" />
+    <ClInclude Include="DebugManager.h" />
+    <ClInclude Include="DialogueManager.h" />
+    <ClInclude Include="DialogueTriggerSimple.h" />
+    <ClInclude Include="Effect.h" />
+    <ClInclude Include="ExplodeChildren.h" />
+    <ClInclude Include="Extra_Menus.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="EnemyManager.h" />
+    <ClInclude Include="EffectsFunctions.h" />
+    <ClInclude Include="EventManager.h" />
+    <ClInclude Include="Floating.h" />
+    <ClInclude Include="GameManager.h" />
+    <ClInclude Include="InGame_UI.h" />
+    <ClInclude Include="MainMenu_Buttons.h" />
+    <ClInclude Include="PauseMenu_Buttons.h" />
+    <ClInclude Include="NilfgaardSoldier.h" />
+    <ClInclude Include="PlayerAttacks.h" />
+    <ClInclude Include="RelicBehaviour.h" />
+    <ClInclude Include="Relic_Notification.h" />
+    <ClInclude Include="RelicManager.h" />
+    <ClInclude Include="ReverbZone.h" />
+    <ClInclude Include="PlayerController.h" />
+    <ClInclude Include="Macros\AlienScripts.h" />
+    <ClInclude Include="RockFall.h" />
+    <ClInclude Include="Stat.h" />
+    <ClInclude Include="Subtitle.h" />
+    <ClInclude Include="TeleportLevel.h" />
+    <ClInclude Include="TriggerMusicInteractive.h" />
+    <ClInclude Include="Trigger_Win.h" />
+    <ClInclude Include="UI_Char_Frame.h" />
+    <ClInclude Include="UI_EndMenu.h" />
+    <ClInclude Include="UltiBar.h" />
+    <ClInclude Include="TriggerAudioEvent.h" />
+    <ClInclude Include="TriggerCamera.h" />
+    <ClInclude Include="TriggerEnvironment.h" />
+    <ClInclude Include="TriggerFootsteps.h" />
+    <ClInclude Include="Win_lose_menu.h" />
+    <ClInclude Include="RootLeshen.h" />
   </ItemGroup>
 </Project>
