--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -210,6 +210,7 @@
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Macros\AlienScripts.h" />
     <ClInclude Include="RockFall.h" />
+    <ClInclude Include="RumblerManager.h" />
     <ClInclude Include="Stat.h" />
     <ClInclude Include="Subtitle.h" />
     <ClInclude Include="TeleportLevel.h" />
@@ -259,6 +260,7 @@
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Macros\dllmain.cpp" />
     <ClCompile Include="RockFall.cpp" />
+    <ClCompile Include="RumblerManager.cpp" />
     <ClCompile Include="Stat.cpp" />
     <ClCompile Include="Subtitle.cpp" />
     <ClCompile Include="TeleportLevel.cpp" />
