--- a/The Witcher/CoreData/Configuration/Layouts/Default.ini
+++ b/The Witcher/CoreData/Configuration/Layouts/Default.ini
@@ -79,34 +79,34 @@ Size=621,794
 Collapsed=0
 
 [Window][Configuration]
-Pos=1175,70
-Size=361,725
+Pos=1469,84
+Size=451,464
 Collapsed=0
-DockId=0x00000003,2
+DockId=0x0000000F,2
 
 [Window][Console]
-Pos=0,557
-Size=1173,238
+Pos=0,707
+Size=1467,304
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Render Options]
-Pos=1175,70
-Size=361,725
+Pos=1469,84
+Size=451,464
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x0000000F,1
 
 [Window][Panel Hierarchy]
-Pos=0,70
-Size=231,485
+Pos=0,84
+Size=231,621
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=1175,70
-Size=361,725
+Pos=1469,84
+Size=451,464
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000F,0
 
 [Window][Test]
 Pos=60,60
@@ -115,12 +115,12 @@ Collapsed=0
 
 [Window][DockSpace BackGround]
 Pos=0,0
-Size=1536,795
+Size=1920,1011
 Collapsed=0
 
 [Window][Scene]
-Pos=233,70
-Size=940,485
+Pos=233,84
+Size=1234,621
 Collapsed=0
 DockId=0x00000009,0
 
@@ -134,16 +134,16 @@ Size=565,398
 Collapsed=0
 
 [Window][Project]
-Pos=0,557
-Size=1173,238
+Pos=0,707
+Size=1467,304
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Game]
-Pos=233,70
-Size=940,485
+Pos=1469,550
+Size=451,461
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x00000012,0
 
 [Window][## Camera options]
 Pos=0,19
@@ -153,7 +153,7 @@ DockId=0x0000000D,0
 
 [Window][## Tools]
 Pos=0,19
-Size=1536,49
+Size=1920,63
 Collapsed=0
 DockId=0x00000010,0
 
@@ -164,16 +164,16 @@ Collapsed=0
 DockId=0x00000009,2
 
 [Window][Animation Timeline]
-Pos=0,557
-Size=1173,238
+Pos=0,707
+Size=1467,304
 Collapsed=0
 DockId=0x00000006,2
 
 [Window][Animator]
-Pos=233,70
-Size=940,485
+Pos=233,84
+Size=1234,621
 Collapsed=0
-DockId=0x00000009,2
+DockId=0x00000009,1
 
 [Window][Physics]
 Pos=60,60
@@ -186,7 +186,7 @@ Size=192,134
 Collapsed=0
 
 [Docking][Data]
-DockSpace                 ID=0x81802EEE Window=0xF3A9BAEC Pos=0,48 Size=1536,776 Split=Y
+DockSpace                 ID=0x81802EEE Window=0xF3A9BAEC Pos=0,48 Size=1920,992 Split=Y
   DockNode                ID=0x00000010 Parent=0x81802EEE SizeRef=1600,52 HiddenTabBar=1 Selected=0x063B9A85
   DockNode                ID=0x00000011 Parent=0x81802EEE SizeRef=1600,764 Split=Y
     DockNode              ID=0x0000000D Parent=0x00000011 SizeRef=1200,45 HiddenTabBar=1 Selected=0x76AC6852
@@ -201,6 +201,8 @@ DockSpace                 ID=0x81802EEE Window=0xF3A9BAEC Pos=0,48 Size=1536,776
               DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=547,215 Selected=0x169CEE22
             DockNode      ID=0x0000000A Parent=0x0000000B SizeRef=362,631 Selected=0xF02CD328
           DockNode        ID=0x0000000C Parent=0x00000005 SizeRef=355,631 Selected=0xF02CD328
-        DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=1200,238 Selected=0xE00EE972
-      DockNode            ID=0x00000003 Parent=0x0000000E SizeRef=361,631 Selected=0xF02CD328
+        DockNode          ID=0x00000006 Parent=0x00000002 SizeRef=1200,238 Selected=0xF9BEF62A
+      DockNode            ID=0x00000003 Parent=0x0000000E SizeRef=361,631 Split=Y Selected=0xF02CD328
+        DockNode          ID=0x0000000F Parent=0x00000003 SizeRef=451,464 Selected=0xF02CD328
+        DockNode          ID=0x00000012 Parent=0x00000003 SizeRef=451,461 Selected=0x83199EB2
 
