Created prefab template + basic collision checks

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -151,6 +151,12 @@
     <ClCompile Include="RumblerManager.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="ProgressiveFog.cpp">
+      <Filter>Scripts</Filter>
+    </ClCompile>
+    <ClCompile Include="TriggerFog.cpp">
+      <Filter>Scripts\Triggers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -311,6 +317,12 @@
     </ClInclude>
     <ClInclude Include="RumblerManager.h">
       <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="ProgressiveFog.h">
+      <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="TriggerFog.h">
+      <Filter>Scripts\Triggers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
