--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -203,6 +203,7 @@
     <ClInclude Include="PauseMenu_Buttons.h" />
     <ClInclude Include="NilfgaardSoldier.h" />
     <ClInclude Include="PlayerAttacks.h" />
+    <ClInclude Include="ProgressiveFog.h" />
     <ClInclude Include="RelicBehaviour.h" />
     <ClInclude Include="Relic_Notification.h" />
     <ClInclude Include="RelicManager.h" />
@@ -214,6 +215,7 @@
     <ClInclude Include="Stat.h" />
     <ClInclude Include="Subtitle.h" />
     <ClInclude Include="TeleportLevel.h" />
+    <ClInclude Include="TriggerFog.h" />
     <ClInclude Include="TriggerMusicInteractive.h" />
     <ClInclude Include="Trigger_Win.h" />
     <ClInclude Include="UI_Char_Frame.h" />
@@ -253,6 +255,7 @@
     <ClCompile Include="EventManager.cpp" />
     <ClCompile Include="NilfgaardSoldier.cpp" />
     <ClCompile Include="PlayerAttacks.cpp" />
+    <ClCompile Include="ProgressiveFog.cpp" />
     <ClCompile Include="RelicBehaviour.cpp" />
     <ClCompile Include="Relic_Notification.cpp" />
     <ClCompile Include="RelicManager.cpp" />
@@ -264,6 +267,7 @@
     <ClCompile Include="Stat.cpp" />
     <ClCompile Include="Subtitle.cpp" />
     <ClCompile Include="TeleportLevel.cpp" />
+    <ClCompile Include="TriggerFog.cpp" />
     <ClCompile Include="TriggerMusicInteractive.cpp" />
     <ClCompile Include="Trigger_Win.cpp" />
     <ClCompile Include="UI_Char_Frame.cpp" />
