Nye maybe it will work

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -211,6 +211,7 @@
     <ClInclude Include="Macros\AlienScripts.h" />
     <ClInclude Include="RockFall.h" />
     <ClInclude Include="Scale_Win.h" />
+    <ClInclude Include="Scale_Wing.h" />
     <ClInclude Include="Spawner.h" />
     <ClInclude Include="Stat.h" />
     <ClInclude Include="Subtitle.h" />
@@ -262,6 +263,7 @@
     <ClCompile Include="Macros\dllmain.cpp" />
     <ClCompile Include="RockFall.cpp" />
     <ClCompile Include="Scale_Win.cpp" />
+    <ClCompile Include="Scale_Wing.cpp" />
     <ClCompile Include="Spawner.cpp" />
     <ClCompile Include="Stat.cpp" />
     <ClCompile Include="Subtitle.cpp" />
