--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -154,6 +154,9 @@
     <ClCompile Include="Spawner.cpp">
       <Filter>Scripts\UI</Filter>
     </ClCompile>
+    <ClCompile Include="Scale_Wing.cpp">
+      <Filter>Scripts\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -316,6 +319,9 @@
       <Filter>Scripts\UI</Filter>
     </ClInclude>
     <ClInclude Include="Spawner.h">
+      <Filter>Scripts\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="Scale_Wing.h">
       <Filter>Scripts\UI</Filter>
     </ClInclude>
   </ItemGroup>
