Okei now balance gets balanced

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -184,6 +184,7 @@
     <ClInclude Include="CheckPoint.h" />
     <ClInclude Include="CheckPoints_Manager.h" />
     <ClInclude Include="Ghoul.h" />
+    <ClInclude Include="Head_Script.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="Check_EndMenu.h" />
     <ClInclude Include="DebugManager.h" />
@@ -211,7 +212,6 @@
     <ClInclude Include="Macros\AlienScripts.h" />
     <ClInclude Include="RockFall.h" />
     <ClInclude Include="Scale_Win.h" />
-    <ClInclude Include="Scale_Wing.h" />
     <ClInclude Include="Spawner.h" />
     <ClInclude Include="Stat.h" />
     <ClInclude Include="Subtitle.h" />
@@ -237,6 +237,7 @@
     <ClCompile Include="CheckPoint.cpp" />
     <ClCompile Include="CheckPoints_Manager.cpp" />
     <ClCompile Include="Ghoul.cpp" />
+    <ClCompile Include="Head_Script.cpp" />
     <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="Check_EndMenu.cpp" />
     <ClCompile Include="DebugManager.cpp" />
@@ -263,7 +264,6 @@
     <ClCompile Include="Macros\dllmain.cpp" />
     <ClCompile Include="RockFall.cpp" />
     <ClCompile Include="Scale_Win.cpp" />
-    <ClCompile Include="Scale_Wing.cpp" />
     <ClCompile Include="Spawner.cpp" />
     <ClCompile Include="Stat.cpp" />
     <ClCompile Include="Subtitle.cpp" />
