--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -154,7 +154,7 @@
     <ClCompile Include="Spawner.cpp">
       <Filter>Scripts\UI</Filter>
     </ClCompile>
-    <ClCompile Include="Scale_Wing.cpp">
+    <ClCompile Include="Head_Script.cpp">
       <Filter>Scripts\UI</Filter>
     </ClCompile>
   </ItemGroup>
@@ -321,7 +321,7 @@
     <ClInclude Include="Spawner.h">
       <Filter>Scripts\UI</Filter>
     </ClInclude>
-    <ClInclude Include="Scale_Wing.h">
+    <ClInclude Include="Head_Script.h">
       <Filter>Scripts\UI</Filter>
     </ClInclude>
   </ItemGroup>
