--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -108,7 +108,7 @@
     </ClCompile>
     <ClCompile Include="Subtitle.cpp">
       <Filter>Scripts</Filter>
-      </ClCompile>
+    </ClCompile>
     <ClCompile Include="Audio_Button.cpp">
       <Filter>Scripts\UI</Filter>
     </ClCompile>
@@ -141,6 +141,9 @@
     </ClCompile>
     <ClCompile Include="RelicManager.cpp">
       <Filter>Scripts\Stats and Effects</Filter>
+    </ClCompile>
+    <ClCompile Include="ColliderPorter.cpp">
+      <Filter>Scripts\Objects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -260,7 +263,7 @@
     </ClInclude>
     <ClInclude Include="Subtitle.h">
       <Filter>Scripts</Filter>
-       </ClInclude>
+    </ClInclude>
     <ClInclude Include="Audio_Button.h">
       <Filter>Scripts\UI</Filter>
     </ClInclude>
@@ -293,6 +296,9 @@
     </ClInclude>
     <ClInclude Include="RelicManager.h">
       <Filter>Scripts\Stats and Effects</Filter>
+    </ClInclude>
+    <ClInclude Include="ColliderPorter.h">
+      <Filter>Scripts\Objects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
