--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -181,10 +181,13 @@
     <ClInclude Include="CameraEnterExit.h" />
     <ClInclude Include="CameraLimits.h" />
     <ClInclude Include="CameraMovement.h" />
+    <ClInclude Include="CloudLeshen.h" />
+    <ClInclude Include="CrowsLeshen.h" />
     <ClInclude Include="Leshen.h" />
     <ClInclude Include="CheckPoint.h" />
     <ClInclude Include="CheckPoints_Manager.h" />
     <ClInclude Include="Ghoul.h" />
+    <ClInclude Include="MeleeLeshen.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="Check_EndMenu.h" />
     <ClInclude Include="DebugManager.h" />
@@ -234,10 +237,13 @@
     <ClCompile Include="CameraEnterExit.cpp" />
     <ClCompile Include="CameraLimits.cpp" />
     <ClCompile Include="CameraMovement.cpp" />
+    <ClCompile Include="CloudLeshen.cpp" />
+    <ClCompile Include="CrowsLeshen.cpp" />
     <ClCompile Include="Leshen.cpp" />
     <ClCompile Include="CheckPoint.cpp" />
     <ClCompile Include="CheckPoints_Manager.cpp" />
     <ClCompile Include="Ghoul.cpp" />
+    <ClCompile Include="MeleeLeshen.cpp" />
     <ClCompile Include="PlayerManager.cpp" />
     <ClCompile Include="Check_EndMenu.cpp" />
     <ClCompile Include="DebugManager.cpp" />
