--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -157,6 +157,15 @@
     <ClCompile Include="RootLeshen.cpp">
       <Filter>Scripts\Enemies</Filter>
     </ClCompile>
+    <ClCompile Include="CloudLeshen.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="CrowsLeshen.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="MeleeLeshen.cpp">
+      <Filter>Scripts\Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -322,6 +331,15 @@
       <Filter>Scripts\Enemies</Filter>
     </ClInclude>
     <ClInclude Include="RootLeshen.h">
+      <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="CloudLeshen.h">
+      <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="CrowsLeshen.h">
+      <Filter>Scripts\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="MeleeLeshen.h">
       <Filter>Scripts\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
