Scale surprisingly works really nice

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -212,6 +212,7 @@
     <ClInclude Include="Macros\AlienScripts.h" />
     <ClInclude Include="RockFall.h" />
     <ClInclude Include="Scale_Win.h" />
+    <ClInclude Include="Scores_Data.h" />
     <ClInclude Include="Spawner.h" />
     <ClInclude Include="Stat.h" />
     <ClInclude Include="Subtitle.h" />
