--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -148,14 +148,14 @@
     <ClCompile Include="CheckPoint.cpp">
       <Filter>Scripts\Debug</Filter>
     </ClCompile>
+    <ClCompile Include="Head_Script.cpp">
+      <Filter>Scripts\UI\Win Menu</Filter>
+    </ClCompile>
     <ClCompile Include="Scale_Win.cpp">
-      <Filter>Scripts\UI</Filter>
+      <Filter>Scripts\UI\Win Menu</Filter>
     </ClCompile>
     <ClCompile Include="Spawner.cpp">
-      <Filter>Scripts\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="Head_Script.cpp">
-      <Filter>Scripts\UI</Filter>
+      <Filter>Scripts\UI\Win Menu</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -315,14 +315,17 @@
     <ClInclude Include="CheckPoint.h">
       <Filter>Scripts\Debug</Filter>
     </ClInclude>
+    <ClInclude Include="Head_Script.h">
+      <Filter>Scripts\UI\Win Menu</Filter>
+    </ClInclude>
     <ClInclude Include="Scale_Win.h">
-      <Filter>Scripts\UI</Filter>
+      <Filter>Scripts\UI\Win Menu</Filter>
     </ClInclude>
     <ClInclude Include="Spawner.h">
-      <Filter>Scripts\UI</Filter>
+      <Filter>Scripts\UI\Win Menu</Filter>
     </ClInclude>
-    <ClInclude Include="Head_Script.h">
-      <Filter>Scripts\UI</Filter>
+    <ClInclude Include="Scores_Data.h">
+      <Filter>Scripts\UI\Win Menu</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -355,6 +358,9 @@
     </Filter>
     <Filter Include="Scripts\Debug">
       <UniqueIdentifier>{2439b081-3d52-4572-8338-780c4f33dd4e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\UI\Win Menu">
+      <UniqueIdentifier>{e666ca06-fba4-40ae-865f-204a8428f363}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
