--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -209,7 +209,9 @@
     <ClInclude Include="ReverbZone.h" />
     <ClInclude Include="PlayerController.h" />
     <ClInclude Include="Macros\AlienScripts.h" />
+    <ClInclude Include="RockDownHill.h" />
     <ClInclude Include="RockFall.h" />
+    <ClInclude Include="RockSpawner.h" />
     <ClInclude Include="RumblerManager.h" />
     <ClInclude Include="Stat.h" />
     <ClInclude Include="Subtitle.h" />
@@ -259,7 +261,9 @@
     <ClCompile Include="ReverbZone.cpp" />
     <ClCompile Include="PlayerController.cpp" />
     <ClCompile Include="Macros\dllmain.cpp" />
+    <ClCompile Include="RockDownHill.cpp" />
     <ClCompile Include="RockFall.cpp" />
+    <ClCompile Include="RockSpawner.cpp" />
     <ClCompile Include="RumblerManager.cpp" />
     <ClCompile Include="Stat.cpp" />
     <ClCompile Include="Subtitle.cpp" />
