--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -151,6 +151,12 @@
     <ClCompile Include="RumblerManager.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
+    <ClCompile Include="RockSpawner.cpp">
+      <Filter>Scripts\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="RockDownHill.cpp">
+      <Filter>Scripts\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -311,6 +317,12 @@
     </ClInclude>
     <ClInclude Include="RumblerManager.h">
       <Filter>Scripts</Filter>
+    </ClInclude>
+    <ClInclude Include="RockSpawner.h">
+      <Filter>Scripts\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="RockDownHill.h">
+      <Filter>Scripts\Objects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
