Rocks spawner off trigger and more configuration variables

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -217,6 +217,7 @@
     <ClInclude Include="Subtitle.h" />
     <ClInclude Include="TeleportLevel.h" />
     <ClInclude Include="TriggerMusicInteractive.h" />
+    <ClInclude Include="TriggerRocks.h" />
     <ClInclude Include="Trigger_Win.h" />
     <ClInclude Include="UI_Char_Frame.h" />
     <ClInclude Include="UI_EndMenu.h" />
@@ -269,6 +270,7 @@
     <ClCompile Include="Subtitle.cpp" />
     <ClCompile Include="TeleportLevel.cpp" />
     <ClCompile Include="TriggerMusicInteractive.cpp" />
+    <ClCompile Include="TriggerRocks.cpp" />
     <ClCompile Include="Trigger_Win.cpp" />
     <ClCompile Include="UI_Char_Frame.cpp" />
     <ClCompile Include="UI_EndMenu.cpp" />
