--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -157,6 +157,9 @@
     <ClCompile Include="RockDownHill.cpp">
       <Filter>Scripts\Objects</Filter>
     </ClCompile>
+    <ClCompile Include="TriggerRocks.cpp">
+      <Filter>Scripts\Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Macros\AlienScripts.h">
@@ -322,6 +325,9 @@
       <Filter>Scripts\Objects</Filter>
     </ClInclude>
     <ClInclude Include="RockDownHill.h">
+      <Filter>Scripts\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="TriggerRocks.h">
       <Filter>Scripts\Objects</Filter>
     </ClInclude>
   </ItemGroup>
