modifing intro scene

--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj
@@ -183,6 +183,7 @@
     <ClInclude Include="CameraMovement.h" />
     <ClInclude Include="CheckPoint.h" />
     <ClInclude Include="CheckPoints_Manager.h" />
+    <ClInclude Include="FadeImages.h" />
     <ClInclude Include="Ghoul.h" />
     <ClInclude Include="MusicController.h" />
     <ClInclude Include="Head_Script.h" />
@@ -239,6 +240,7 @@
     <ClCompile Include="CameraMovement.cpp" />
     <ClCompile Include="CheckPoint.cpp" />
     <ClCompile Include="CheckPoints_Manager.cpp" />
+    <ClCompile Include="FadeImages.cpp" />
     <ClCompile Include="Ghoul.cpp" />
     <ClCompile Include="MusicController.cpp" />
     <ClCompile Include="Head_Script.cpp" />
