--- a/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
+++ b/The Witcher/CoreData/AlienEngineScripts/AlienEngineScripts.vcxproj.filters
@@ -103,9 +103,6 @@
     <ClCompile Include="ExplodeChildren.cpp">
       <Filter>Scripts\Objects</Filter>
     </ClCompile>
-    <ClCompile Include="Subtitle.cpp">
-      <Filter>Scripts</Filter>
-    </ClCompile>
     <ClCompile Include="Audio_Button.cpp">
       <Filter>Scripts\UI</Filter>
     </ClCompile>
@@ -156,12 +153,18 @@
     </ClCompile>
     <ClCompile Include="Spawner.cpp">
       <Filter>Scripts\UI\Win Menu</Filter>
-      </ClCompile>
+    </ClCompile>
     <ClCompile Include="RumblerManager.cpp">
       <Filter>Scripts</Filter>
     </ClCompile>
     <ClCompile Include="MusicController.cpp">
       <Filter>Scripts\Triggers</Filter>
+    </ClCompile>
+    <ClCompile Include="Subtitle.cpp">
+      <Filter>Scripts\Intro</Filter>
+    </ClCompile>
+    <ClCompile Include="FadeImages.cpp">
+      <Filter>Scripts\Intro</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -276,9 +279,6 @@
     <ClInclude Include="ExplodeChildren.h">
       <Filter>Scripts\Objects</Filter>
     </ClInclude>
-    <ClInclude Include="Subtitle.h">
-      <Filter>Scripts</Filter>
-    </ClInclude>
     <ClInclude Include="Audio_Button.h">
       <Filter>Scripts\UI</Filter>
     </ClInclude>
@@ -332,12 +332,18 @@
     </ClInclude>
     <ClInclude Include="Scores_Data.h">
       <Filter>Scripts\UI\Win Menu</Filter>
-      </ClInclude>
+    </ClInclude>
     <ClInclude Include="RumblerManager.h">
       <Filter>Scripts</Filter>
     </ClInclude>
     <ClInclude Include="MusicController.h">
       <Filter>Scripts\Triggers</Filter>
+    </ClInclude>
+    <ClInclude Include="Subtitle.h">
+      <Filter>Scripts\Intro</Filter>
+    </ClInclude>
+    <ClInclude Include="FadeImages.h">
+      <Filter>Scripts\Intro</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -373,6 +379,9 @@
     </Filter>
     <Filter Include="Scripts\UI\Win Menu">
       <UniqueIdentifier>{e666ca06-fba4-40ae-865f-204a8428f363}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scripts\Intro">
+      <UniqueIdentifier>{a9f2913a-ec8a-4cd3-a704-e9b34bb307b8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
